--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,7 +158,23 @@ p {
 
 /* Media Queries */
 
-@media (max-width: 640px) {
+/@media (min-width: 980px) {
+   /*.title {display: static; margin-left: 40px;};
+    .footer {display: static; padding-left: 40px;};
+    .container {margin-left: 40px;} */
+}
+
+@media screen and (max-width: 768px) {
+    .header {width: 100%;}
+    .container {width: 100%;}
+    .footer {width: 100%;}
+    .content {margin-left: 20px;}
+    .contactCont {margin-left: 20px;}
+    .portfolioCont {margin-left: 20px;}
+    .title { margin-left: 20px;}
+}
+
+@media screen and (max-width: 640px) {
     .header {width: 100%;}
     .container {width: 100%;}
     .footer {width: 100%;}
@@ -169,19 +185,5 @@ p {
     .columnPic {width: 100%; height: auto; margin-bottom: 20px;}
 }
 
-@media (max-width: 768px) {
-    .header {width: 100%;}
-    .container {width: 100%;}
-    .footer {width: 100%;}
-    .content {margin-left: 20px;}
-    .contactCont {margin-left: 20px;}
-    .portfolioCont {margin-left: 20px;}
-    .title { margin-left: 20px;}
-}
 
-/*@media (min-width: 980px) {
-    .title {display: static; margin-left: 40px;};
-    .footer {display: static; padding-left: 40px;};
-    .container {margin-left: 40px;}
- 
-}
+
